# ChessEngine

./: ChessEngine.sln  README.md
ChessEngine/: Board.cpp  Board.h  CMakeLists.txt  ChessEngine.cpp  ChessEngine.vcxproj  ChessEngine.vcxproj.filters  Logger.cpp  Logger.h  bindings.cpp  chess.cpp  chess.h  chess.hpp  logger.cpp  logger.hpp
ChessEngine/pyenv/: chess_engine.pyd  chess_engine.pyi  test.py
